[project]
name = "technical-test-llm-ops"
version = "0.1.0"
description = "The technical test for the LLM Ops position(s)."
readme = "README.md"
requires-python = ">=3.10"

[dependency-groups]
core = [
    "baml-py>=0.78.0",
    "openai>=1.65.5",
    "fastapi>=0.115.11",
    "python-dotenv==1.0.1"
]
dev = [
    "black==23.10.1",
    "pytest-cov==5.0.0",
    "pytest==7.4.2",
    "pytest-xdist==3.6.1",
    "setuptools==75.1.0",
    "pytest-sugar==1.0.0",
    "jsonpath-ng==1.7.0",
    "wheel>=0.45.1",
    "pytest-asyncio>=0.23.8",
    "jsonschema>=4.23.0",
]
